src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__spacing_tests__snapshot_consistent_spacing_three_suggestions.snap
---
source: src/ai/ai_render_tests/spacing_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ┌ Anthropic ───────── claude-3-5-sonnet... ┐ "
"                                                       │1. [Fix] .first                           │ "
"                                                       │   First suggestion                       │ "
"                                                       │                                          │ "
"                                                       │2. [Next] .second                         │ "
"                                                       │   Second suggestion                      │ "
"                                                       │                                          │ "
"                                                       │3. [Optimize] .third                      │ "
"                                                       │   Third suggestion                       │ "
"                                                       │                                          │ "
"                                                       │                                          │ "
"                                                       └1-5 or Alt+↑↓+Enter to apply | Ctrl+A to c┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
