src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__spacing_tests__snapshot_no_spacing_after_last_suggestion.snap
---
source: src/ai/ai_render_tests/spacing_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ────── (1/2) claude-3-5-son... ╮ "
"                                                       │                                          │ "
"                                                       │ 1. [Fix] .first                          │ "
"                                                       │    First                                 │ "
"                                                       │                                          │ "
"                                                       │ 2. [Query] .last                         │ "
"                                                       │    Last suggestion should have no        │ "
"                                                       │    spacing after it                      │ "
"                                                       │ ──────────────────────────────────────── │ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰↑↓ Select • Enter Apply Selection • Ctrl+G╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
