src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__spacing_tests__snapshot_spacing_maintained_with_middle_option_selected.snap
---
source: src/ai/ai_render_tests/spacing_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ────── (2/3) claude-3-5-son... ╮ "
"                                                       │                                          █ "
"                                                       │ 1. [Fix] .first                          █ "
"                                                       │    First suggestion                      █ "
"                                                       │                                          █ "
"                                                       │ 2. [Query] .second                       █ "
"                                                       │    Second suggestion                     █ "
"                                                       │                                          █ "
"                                                       │ 3. [Optimize] .third                     █ "
"                                                       │ ──────────────────────────────────────── ║ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰ • Alt+↑↓ Select • Enter Apply Selection •╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
